--- a/IMS-Starter/pom.xml
+++ b/IMS-Starter/pom.xml
@@ -49,6 +49,28 @@
 
 	<build>
 		<plugins>
+		<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-assembly-plugin</artifactId>
+    <executions>
+        <execution>
+        <phase>package</phase>
+        <goals>
+            <goal>single</goal>
+        </goals>
+        <configuration>
+            <archive>
+                <manifest>
+                    <mainClass>com.qa.main.Runner</mainClass>
+                </manifest>
+            </archive>
+            <descriptorRefs>
+                <descriptorRef>jar-with-dependencies</descriptorRef>
+            </descriptorRefs>
+        </configuration>
+        </execution>
+    </executions>
+</plugin>
 			<!-- Creates a jar for the code (does not contain other dependencies which 
 				are needed for the project to run out of the box) -->
 			<plugin>
